Prevent user selection on month navigation buttons on iOS

--- a/docs/src/app/(docs)/react/components/calendar/demos/calendar.module.css
+++ b/docs/src/app/(docs)/react/components/calendar/demos/calendar.module.css
@@ -36,6 +36,7 @@
 .DecrementMonth,
 .IncrementMonth {
   border: none;
+  -webkit-user-select: none;
   user-select: none;
   background-color: transparent;
   border-radius: 4px;
